--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ body {
 
 }
 
+.heading h1 {
+    font-size: 25px;
+}
+
 
 
 .card img {
@@ -87,7 +91,7 @@ body {
     
 }
 
-.card .heading h2:hover {
+.card .heading h1:hover {
     color: var(--cyan);
     cursor: pointer;
 }
